# dhaclips-downloader

./: .gitignore  pyproject.toml  run_gui.py  start.sh
src/: gui.py
src/core/: _constants.py  _time_handler.py  _yt_ops.py  main.py
src/gui_elements/: elements.py  logic.py
tests/: test.py
